# python-todo-app-pdm

./: .gitignore  README.md  pyproject.toml  tasks.py
