[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kalle Ilves", email = "kalleilv@gmail.com"},
]
dependencies = [
    "python-dotenv~=0.19",
    "invoke~=1.6",
    "pylint~=2.12",
    "autopep8~=1.6",
    "pytest~=6.2",
    "pytest-dotenv~=0.5",
    "coverage~=6.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
