[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kalle Ilves", email = "kalleilv@gmail.com"},
]
dependencies = [
    "python-dotenv~=0.19",
    "pylint~=2.12",
    "autopep8~=1.6",
    "pytest~=6.2",
    "pytest-dotenv~=0.5",
    "coverage~=6.2"]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[tool.pdm.scripts]
start = "python3 src/index.py"
build = "python3 src/build.py"
test = "pytest src"
lint = "pylint src"
format = "autopep8 --in-place --recursive src"
coverage = "coverage run --branch -m pytest src"
coverage-report = "coverage html"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
